fix the dark mode design

--- a/src/js/components/popup/popup.scss
+++ b/src/js/components/popup/popup.scss
@@ -1,4 +1,3 @@
-
 body {
   margin: 0;
 }
@@ -13,4 +12,6 @@ ul {
   width: 700px;
   padding: 20px;
   display: grid;
+  background-color: var(--mui-background-default, #181943);
+  /* fallback for dark mode */
 }
